# porifera

./: .gitignore  Cargo.toml  Gruntfile.js  README.md  a.out.js  a.out.wasm  build.sh  dump.rdb  hello.wasm  index.node  package-lock.json  package.json  rollup.config.js  server.js  webpack.config.js
cpp/: CMakeLists.txt  fib.cpp  fib.h  hello.cpp
jslib/: benchmark.js  cache-results.html  caller.js  child.js  no-cache-results.html  server.js
lib/: arraysum.js  caller.js  server.js
node/: app.js
redisNode/: dump.rdb
rust-node/: Cargo.toml  app.py  package-lock.json  package.json  requirements.txt
rust-node/python_files/: caller.py
rust-node/src/: lib.rs
src/: app.js
web/: AudioThreadManagerHooks.js  PitchNode.js  PitchProcessor.js  babylon-inspector.min.js  babylon.4.2.0.min.js  babylon.gui.4.2.0.min.js  babylonScene.js  beginPyAnalysisNote.js  bubble-processor.js  bubble.js  bubble.wasm  index.html  index.js  noteToNumberConverter.js  rust_node.js  rust_node_bg.wasm  selectAudioDevice.js  setupAudio.js  styles.css  webaudio-wasm-wrapper.js
web/rust-node/: Cargo.toml  app.py  mingus_calcs.py  notesData.py  package-lock.json  package.json  requirements.txt
web/rust-node/python_files/: arraysum.py  caller.py
